# tidesight

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: api-reference.md  architecture.md  index.md  user-guide.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css  types.ts
frontend/src/components/: AlertsPanel.vue  ArrivalsTable.vue  ReplayPanel.vue  TideTimeline.vue  VesselMap.vue
frontend/src/composables/: useWebSocket.ts
src/tidesight/: __init__.py  background.py  config.py  main.py
src/tidesight/api/: __init__.py  routes.py  schemas.py  websocket.py
src/tidesight/db/: __init__.py  database.py
src/tidesight/models/: __init__.py  alert.py  position.py  tide.py  vessel.py
src/tidesight/services/: __init__.py  ais_client.py  alerter.py  predictor.py  tide_service.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_ais_client.py  test_alerter.py  test_predictor.py  test_tide_service.py
